welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: error: Missing closing brace `}' assumed here
def Brosse(c:Color) {
^Array2:1: error: expected class or object definition
def Brosse(c:Color) {
^Array2:6: error: expected class or object definition
def exo() {
^