welcome.lessons.welcome.array.basics.Array2.scala.code
def Brosse(c:Color) {
  setCouleurBrosse(c:Color)
  baisseBrosse() ; leveBrosse()
}

def exo() {
  var x=getMondeHauteur()
  var T = new Array[Color](x)
  for (compt<-1 to T.length-1) {
    T(compt)=GetCouleurSol()
  }
  



override def run() {exo()
}